tests/baselines/reference/typeParameterAsBaseType.errors.txt
tests/cases/conformance/types/typeParameters/typeParameterAsBaseType.ts(4,20): error TS2693: 'T' only refers to a type, but is being used as a value here.
tests/cases/conformance/types/typeParameters/typeParameterAsBaseType.ts(5,24): error TS2693: 'U' only refers to a type, but is being used as a value here.
tests/cases/conformance/types/typeParameters/typeParameterAsBaseType.ts(7,24): error TS2312: An interface may only extend a class or another interface.
tests/cases/conformance/types/typeParameters/typeParameterAsBaseType.ts(8,28): error TS2312: An interface may only extend a class or another interface.


==== tests/cases/conformance/types/typeParameters/typeParameterAsBaseType.ts (4 errors) ====
    // type parameters cannot be used as base types
    // these are all errors
    
    class C<T> extends T { }
                       ~
!!! error TS2693: 'T' only refers to a type, but is being used as a value here.
    class C2<T, U> extends U { }
                           ~
!!! error TS2693: 'U' only refers to a type, but is being used as a value here.
    
    interface I<T> extends T { }
                           ~
!!! error TS2312: An interface may only extend a class or another interface.
    interface I2<T, U> extends U { }
                               ~
!!! error TS2312: An interface may only extend a class or another interface.
    
    